<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TSO Tools</string>
    <string name="title_section1">Welcome</string>
    <string name="title_section2">Buildings</string>
    <string name="title_section3">Resources</string>
    <string name="title_section4">Blank</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="addbuilding">Add New Building</string>
    <string name="add">Add</string>
    <string name="todo">Default Description</string>
    <string name="level"> 1 </string>
    <string name="buff">Building Name</string>
    <string name="defTime">0:00</string>
    <string name="Time">Time</string>
    <string name="mins">0 mins</string>
    <string name="seconds">0 secs</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <color name="ltBlue">#33B5E5</color>
    <color name="Blue">#0099CC</color>
    <color name="ltOrange">#ffbb33</color>
    <color name="Orange">#ff8800</color>
    <color name="ltPurple">#aa66cc</color>
    <color name="Purple">#9933cc</color>
    <color name="ltGreen">#99CC00</color>
    <color name="Green">#669900</color>
    <color name="ltRed">#FF4444</color>
    <color name="Red">#CC0000</color>

    <string name="delete">Delete</string>
    <string name="app_dev">Asaboi</string>
    <string name="app_devpos">Self Proclaimed Android Developer</string>
    <string name="app_devemail">bernard.rivera.m@gmail.com</string>
    <string name="welcome_eula">Welcome</string>

    <string-array name="Buildings">
        <item>Bakery</item>
        <item>Bottomless Well</item>
        <item>Brewery</item>
        <item>Bronze Smelter</item>
        <item>Bronze Weaponsmith</item>
        <item>Butcher</item>
        <item>Cannon Forge</item>
        <item>Carpenter</item>
        <item>Coal Mine</item>
        <item>Coinage</item>
        <item>Coking Plant</item>
        <item>Copper Ore Mine</item>
        <item>Crossbowsmith</item>
        <item>Damascene Weaponsmith</item>
        <item>Deep Well</item>
        <item>Exotic Sawmill</item>
        <item>Farm</item>
        <item>Fisher</item>
        <item>Gold Ore Mine</item>
        <item>Gold Smelter</item>
        <item>Hardwood Cutter</item>
        <item>Hardwood Forester</item>
        <item>Hardwood Sawmill</item>
        <item>Hunter</item>
        <item>Iron Ore Mine</item>
        <item>Iron Smelter</item>
        <item>Iron Weaponsmith</item>
        <item>Longbowmaker</item>
        <item>Marble Mason</item>
        <item>Mill</item>
        <item>Pinewood Cutter</item>
        <item>Pinewood Forester</item>
        <item>Pinewood Sawmill</item>
        <item>Powderhut</item>
        <item>Recycler</item>
        <item>Shortbowmaker</item>
        <item>Stable</item>
        <item>Steel Smelter</item>
        <item>Steel Weaponsmith</item>
        <item>Stone mason</item>
        <item>Titanium Smelter</item>
        <item>Toolmaker</item>
        <item>Watermill</item>
        <item>Well</item>
        <item>Wheelmaker</item>
    </string-array>
    <string-array name="Resources">
        <item>Bread</item>
        <item>Brew</item>
        <item>Bronze Sword</item>
        <item>Cannon</item>
        <item>Carriage</item>
        <item>Copper Bar</item>
        <item>Coal</item>
        <item>Coin</item>
        <item>Copper Ore</item>
        <item>Damascene Sword</item>
        <item>Fish</item>
        <item>Flour</item>
        <item>Gold Bar</item>
        <item>Gold Ore</item>
        <item>Granite</item>
        <item>Gunpowder</item>
        <item>Harwood Log</item>
        <item>Horse</item>
        <item>Hardwood Plank</item>
        <item>Hardwood</item>
        <item>Iron bar</item>
        <item>Iron Ore</item>
        <item>Iron Sword</item>
        <item>LongBow</item>
        <item>Marble</item>
        <item>Meat</item>
        <item>Pinewood Log</item>
        <item>Pinewood Plank</item>
        <item>Pinewood Tree</item>
        <item>Salt</item>
        <item>Sausage</item>
        <item>Steel Bar</item>
        <item>Shortbow</item>
        <item>Steel Sword</item>
        <item>Stone</item>
        <item>Titanium</item>
        <item>Tool</item>
        <item>Titanium Ore</item>
        <item>Water</item>
        <item>Wheat</item>
        <item>Wheat Field</item>
        <item>Wheel</item>
        <item>Crossbow</item>
        <item>Exotic Log</item>
        <item>Exotic Plank</item>
    </string-array>

    <string name="title_activity_notifications">NotificationsActivity</string>

</resources>