<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:theme="@android:style/Theme.Holo.Dialog"
    android:orientation="vertical" >

    <LinearLayout        
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imgb_row"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            
            android:contentDescription="@string/todo"
            android:src="@drawable/coinage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtBuildingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/txtResources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/txtBaseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtvLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical|center_vertical"
        android:text="@string/level"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/sbLvl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:max="@integer/maxLevel" />

    <TextView
        android:id="@+id/txtvBuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buff" />

    <SeekBar
        android:id="@+id/sbBuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:max="@integer/maxBuff" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/sbMins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:max="@integer/maxMins" />

        <TextView
            android:id="@+id/tvMins"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/mins" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/sbSecs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:max="@integer/maxMins" />

        <TextView
            android:id="@+id/tvSecs"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/seconds" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSave"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"       
        android:text="@string/save" />

    <TextView
        android:id="@+id/btnDelete"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/delete" />

</LinearLayout>